# advent-of-code

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md  justfile
2024/: README.md
2025/: README.md
xtask/: Cargo.toml
xtask/src/: generate.rs  main.rs
