[package]
name = "xtask"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
dotenvy = "0.15.7"
env_logger = "0.11.8"
jiff = "0.2.16"
log = "0.4.29"
owo-colors = "4.2.3"
reqwest = "0.12.25"
tokio = { version = "1.48.0", features = ["full"] }
